[package]
name = "ultra-batch"
version = "0.1.1"
description = "Tokio-based library to batch and cache database queries or other data lookups"
authors = ["Kyle Lacy <kylelacy+git@pm.me>"]
edition = "2021"
repository = "https://github.com/kylewlacy/ultra-batch"
readme = "README.md"
license = "MIT OR Apache-2.0"
categories = ["asynchronous", "caching"]
keywords = ["cache", "batch", "dataloader"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^1.16", features = ["rt", "sync", "macros", "time"] }
async-trait = "0.1.52"
thiserror = "^1.0"
chashmap = "^2.2"
log = "0.4.14"

[dev-dependencies]
uuid = "0.8.2"
anyhow = "^1.0"
fakeit = "^1.1"
criterion = { version = "0.3.5", features = ["html_reports"] }
tokio = { version = "^1.16", features = ["full"] }

[[bench]]
name = "batcher"
harness = false
