[package]
name = "ultra-batch"
version = "0.2.0"
description = "Tokio-based library to batch and cache database queries or other data lookups"
authors = ["Kyle Lacy <rust@kyle.space>"]
edition = "2021"
rust-version = "1.56"
repository = "https://github.com/kylewlacy/ultra-batch"
readme = "README.md"
license = "MIT OR Apache-2.0"
categories = ["asynchronous", "caching"]
keywords = ["cache", "batch", "dataloader"]

[features]
log = ["tracing/log"]

[dependencies]
tokio = { version = "^1.16", features = ["rt", "sync", "macros", "time"] }
async-trait = "0.1.52"
thiserror = "^1.0"
chashmap = "^2.2"
tracing = "0.1.30"

[dev-dependencies]
uuid = "0.8.2"
anyhow = "^1.0"
fakeit = "^1.1"
tokio = { version = "^1.16", features = ["full"] }
divan = "0.1.14"

[[bench]]
name = "batcher"
harness = false
